# Hack

./: Makefile.am  configure.ac
src/: Makefile.am
src/Hack-Bold.ufo/: lib.plist
